# medgama

./: Dockerfile  README.md  app.py  generation_config.json  preprocessor_config.json  requirements.txt
medgama-devin-1772957816-deploy-hf-hub/: .dockerignore  .gitignore  Dockerfile  PUSH_TO_GITHUB.md  WEBAPP_README.md  app.py  config.json  pyproject.toml  requirements.txt  tokenizer_config.json
medgama-devin-1772957816-deploy-hf-hub/static/: index.html
